k8s/gateway/frontend-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  namespace: envoy
  name: envoy-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: envoy
  name: eg-frontend
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: frontend.127.0.0.1.nip.io
      name: http-frontend
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  parentRefs:
    - name: eg-frontend
      namespace: envoy
  hostnames:
    - "frontend.127.0.0.1.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: website-svc
          namespace: website
          port: 80
